--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="onAirhelp">Helpline</string>
-    <string name="police_number">Police Number</string>
-    <string name="advocate">Advocate</string>
+    <string name="legal_assistance">Legal Assistance</string>
+
 
 
     <string name="hello_world">Hello world!</string>
@@ -71,7 +71,7 @@
 
     <string name="Police">Police</string>
     <string name="RAB">RAB</string>
-    <string name="Media">Media</string>
+    <string name="other">Other Help</string>
     <string name="Wemen_Organization">Wemen Organization</string>
     <string name="Advocate">Advocate</string>
     <string name="Ambulence">Ambulence</string>
