--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
 
     <string name="hello_world">Hello world!</string>
+    <string name="laws_right">Laws &amp; Rights!</string>
     <string name="action_settings">Settings</string>
     <string name="Profile">Profile</string>
     <string name="Guideline">Guideline</string>
